svc_deploy_main.yml
---
# svc-main > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 80
---
# deploy-main
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 5
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: leejoohyun/portal:main
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
